# bhm_overtime

./: .firebaserc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LAUNCH.md  README.md  ROADMAP.md  SPEC.md  analysis-map.html  app.js  appLock.js  calculators.js  cardnews-pipeline.js  cardnews.html  cardnews.js  cardnews_preview.html  chat-ui.js  config.js  dashboard.css  dashboard.html  dashboard.js  data.js  demo-data.js  eslint.config.js  extensionBridge.js  firebase.json  firestore.indexes.json  firestore.rules  googleAuth.js  googleCalendarSync.js  googleDriveStore.js  holidays.js  html-preview.html  index.html  inline-ui-helpers.js  insight-engine.js  job-templates.js  leave-tab.js  (+62 more)
.claude/: settings.json
.gemini/: parser_test.js
admin/: admin.css  (+7 more)
backend/: README.md  pyproject.toml
backend/app/: main.py  ocr_proxy.py  security.py
backend/app/agents/: registry.py  runner.py
backend/app/agents/templates/: 01-meeting-summarizer.json  02-receipt-to-csv.json  03-onboarding-checklist.json  04-sbar-handover.json  05-patient-education.json  06-dept-sop.json  07-email-draft.json  08-weekly-report.json  09-medical-translate.json  10-risk-checklist.json  11-proposal-draft.json  12-snuhmate-user-copilot.json  13-snuhmate-ops-admin-copilot.json
backend/app/cache/: sqlite.py
backend/app/corpus/: store.py  validation.py
backend/app/parsers/: duty_codes.py  excel.py
backend/app/schemas/: schedule.py
backend/tests/: test_admin_auth.py  test_ai_agents.py  test_api_validation.py  test_cache.py  test_corpus.py  test_excel_parser.py  test_ocr_proxy.py
(+1150 files in other folders)
